prints euler method results with tabulate library

--- a/Python/02-euler_method.ipynb
+++ b/Python/02-euler_method.ipynb
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 20,
    "id": "fbe1e0b8",
    "metadata": {},
    "outputs": [],
@@ -97,7 +97,8 @@
     "import math263\n",
     "import numpy as np\n",
     "import sympy as sp\n",
-    "import matplotlib.pyplot as plt"
+    "import matplotlib.pyplot as plt\n",
+    "from tabulate import tabulate"
    ]
   },
   {
@@ -124,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 21,
    "id": "d1a894ba",
    "metadata": {},
    "outputs": [
@@ -162,11 +163,11 @@
     "display(soln) \n",
     "rhs=f(x,y(x));\n",
     "\n",
-    "y=sp.lambdify(x, soln.rhs, modules=['numpy']); \n",
+    "sym_y=sp.lambdify(x, soln.rhs, modules=['numpy']); \n",
     "hx = 0.01;\n",
     "xvals = np.arange(a, b+hx, hx, dtype=np.double);\n",
     "ex1=plt.figure();\n",
-    "plt.plot(xvals, y(xvals), color='b');\n",
+    "plt.plot(xvals, sym_y(xvals), color='b');\n",
     "plt.title(f\"$y' = {sp.latex(rhs)}$, $y({a})={y0}$\");\n",
     "plt.xlabel(r\"$x$\");\n",
     "plt.ylabel(r\"$y$\");\n",
@@ -179,18 +180,73 @@
    "id": "db6cc8d1",
    "metadata": {},
    "source": [
-    "Next we solve the problem numerically with $n=20$ steps of our forward Euler implementation."
+    "Next we solve the problem numerically with $n=20$ steps of our forward Euler implementation and display the results in a table.  The third column displays the value $y_i$ arising from Euler's method, while the fourth column of the table displays the value $y(x_i)$ of the true solution rounded to 5 decimal places."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 22,
    "id": "70203dd0",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "┍━━━━━┯━━━━━━━━━┯━━━━━━━━━┯━━━━━━━━━━┑\n",
+      "│   i │     x_i │     y_i │   y(x_i) │\n",
+      "┝━━━━━┿━━━━━━━━━┿━━━━━━━━━┿━━━━━━━━━━┥\n",
+      "│   0 │ 0.00000 │ 3.00000 │  3.00000 │\n",
+      "├─────┼─────────┼─────────┼──────────┤\n",
+      "│   1 │ 0.10000 │ 2.70000 │  2.71484 │\n",
+      "├─────┼─────────┼─────────┼──────────┤\n",
+      "│   2 │ 0.20000 │ 2.43100 │  2.45873 │\n",
+      "├─────┼─────────┼─────────┼──────────┤\n",
+      "│   3 │ 0.30000 │ 2.19190 │  2.23082 │\n",
+      "├─────┼─────────┼─────────┼──────────┤\n",
+      "│   4 │ 0.40000 │ 1.98171 │  2.03032 │\n",
+      "├─────┼─────────┼─────────┼──────────┤\n",
+      "│   5 │ 0.50000 │ 1.79954 │  1.85653 │\n",
+      "├─────┼─────────┼─────────┼──────────┤\n",
+      "│   6 │ 0.60000 │ 1.64459 │  1.70881 │\n",
+      "├─────┼─────────┼─────────┼──────────┤\n",
+      "│   7 │ 0.70000 │ 1.51613 │  1.58659 │\n",
+      "├─────┼─────────┼─────────┼──────────┤\n",
+      "│   8 │ 0.80000 │ 1.41351 │  1.48933 │\n",
+      "├─────┼─────────┼─────────┼──────────┤\n",
+      "│   9 │ 0.90000 │ 1.33616 │  1.41657 │\n",
+      "├─────┼─────────┼─────────┼──────────┤\n",
+      "│  10 │ 1.00000 │ 1.28355 │  1.36788 │\n",
+      "├─────┼─────────┼─────────┼──────────┤\n",
+      "│  11 │ 1.10000 │ 1.25519 │  1.34287 │\n",
+      "├─────┼─────────┼─────────┼──────────┤\n",
+      "│  12 │ 1.20000 │ 1.25067 │  1.34119 │\n",
+      "├─────┼─────────┼─────────┼──────────┤\n",
+      "│  13 │ 1.30000 │ 1.26961 │  1.36253 │\n",
+      "├─────┼─────────┼─────────┼──────────┤\n",
+      "│  14 │ 1.40000 │ 1.31164 │  1.40660 │\n",
+      "├─────┼─────────┼─────────┼──────────┤\n",
+      "│  15 │ 1.50000 │ 1.37648 │  1.47313 │\n",
+      "├─────┼─────────┼─────────┼──────────┤\n",
+      "│  16 │ 1.60000 │ 1.46383 │  1.56190 │\n",
+      "├─────┼─────────┼─────────┼──────────┤\n",
+      "│  17 │ 1.70000 │ 1.57345 │  1.67268 │\n",
+      "├─────┼─────────┼─────────┼──────────┤\n",
+      "│  18 │ 1.80000 │ 1.70510 │  1.80530 │\n",
+      "├─────┼─────────┼─────────┼──────────┤\n",
+      "│  19 │ 1.90000 │ 1.85859 │  1.95957 │\n",
+      "├─────┼─────────┼─────────┼──────────┤\n",
+      "│  20 │ 2.00000 │ 2.03373 │  2.13534 │\n",
+      "┕━━━━━┷━━━━━━━━━┷━━━━━━━━━┷━━━━━━━━━━┙\n"
+     ]
+    }
+   ],
    "source": [
     "n = 20;\n",
-    "(x, y) = math263.feuler(f, a, b, y0, n)"
+    "(x,y) = math263.feuler(f, a, b, y0, n);\n",
+    "table = np.transpose(np.stack((x, y, sym_y(x))));\n",
+    "hdrs = [\"i\", \"x_i\", \"y_i\", \"y(x_i)\"];\n",
+    "print(tabulate(table, hdrs, tablefmt='mixed_grid', floatfmt='0.5f', showindex=True))"
    ]
   },
   {
@@ -203,7 +259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 23,
    "id": "fa104a20",
    "metadata": {},
    "outputs": [
@@ -241,22 +297,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 24,
    "id": "d7588c3a",
    "metadata": {},
    "outputs": [],
    "source": [
-    "f = lambda x, y: x+y;\n",
-    "a, b = 0, 10;\n",
-    "y0=1;\n",
-    "n = 20;\n",
-    "(x, y) = math263.feuler(f, a, b, y0, n);"
+    "#f = lambda x, y: x+y;\n",
+    "#a, b = 0, 10;\n",
+    "#y0=1;\n",
+    "#n = 20;\n",
+    "#(x, y) = math263.feuler(f, a, b, y0, n);"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "1242c142",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "908c3dc4",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b0b931b4",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "66ca7529",
    "metadata": {},
    "outputs": [],
    "source": []
