minor edits to lectures 01 and 02

--- a/Python/02-euler_method.ipynb
+++ b/Python/02-euler_method.ipynb
@@ -15,14 +15,14 @@
    "source": [
     "Suppose that we want to numerically solve a first order IVP of the form\n",
     "\\begin{align}\n",
-    "y'(x)&=f(x,y),\\\\\n",
+    "y'&=f(x,y),\\\\\n",
     "y(x_0) &=y_0\n",
     "\\end{align}\n",
     "over the interval $[a,b]$.  Choosing some positive integer $n$, our goal is compute a table of points $(x_i,y_i)$ so that if $y$ is the true solution, then\n",
     "\\begin{equation}\n",
     "y(x_i) = y_i\n",
     "\\end{equation}\n",
-    "for $n = 0,1,\\dots, n$.  We say that there are $n$ steps, or equivalently $n+1$ mesh points or nodes.  The distance $h_i=x_{i+1}-x_i$ is called the $i$th step-size, which may be variable.  For much of the course, however, we will use a fixed step size $h=(b-a)/n$.\n",
+    "for $n = 0,1,\\dots, n$.  We say that there are $n$ **steps**, or equivalently $n+1$ **mesh points** or nodes.  The distance $h_i=x_{i+1}-x_i$ is called the $i$th **step-size**, which may be variable.  For much of the course, however, we will use a fixed step size $h=(b-a)/n$.\n",
     "\n",
     "Once the mesh points have been chosen, the most straightforward approach to computing the $y_i$'s is known as Euler's method, which simply appeals to the idea of linearization from calculus.  Namely, if $y$ is the true solution and we assume that we have $y_i=y(x_i)$ exactly, then we have the approximation\n",
     "\\begin{equation}\n",
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 2,
    "id": "fbe1e0b8",
    "metadata": {},
    "outputs": [],
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 3,
    "id": "d1a894ba",
    "metadata": {},
    "outputs": [
@@ -185,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 8,
    "id": "70203dd0",
    "metadata": {},
    "outputs": [
@@ -193,51 +193,51 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "┍━━━━━┯━━━━━━━━━┯━━━━━━━━━┯━━━━━━━━━━┑\n",
-      "│   i │     x_i │     y_i │   y(x_i) │\n",
-      "┝━━━━━┿━━━━━━━━━┿━━━━━━━━━┿━━━━━━━━━━┥\n",
-      "│   0 │ 0.00000 │ 3.00000 │  3.00000 │\n",
-      "├─────┼─────────┼─────────┼──────────┤\n",
-      "│   1 │ 0.10000 │ 2.70000 │  2.71484 │\n",
-      "├─────┼─────────┼─────────┼──────────┤\n",
-      "│   2 │ 0.20000 │ 2.43100 │  2.45873 │\n",
-      "├─────┼─────────┼─────────┼──────────┤\n",
-      "│   3 │ 0.30000 │ 2.19190 │  2.23082 │\n",
-      "├─────┼─────────┼─────────┼──────────┤\n",
-      "│   4 │ 0.40000 │ 1.98171 │  2.03032 │\n",
-      "├─────┼─────────┼─────────┼──────────┤\n",
-      "│   5 │ 0.50000 │ 1.79954 │  1.85653 │\n",
-      "├─────┼─────────┼─────────┼──────────┤\n",
-      "│   6 │ 0.60000 │ 1.64459 │  1.70881 │\n",
-      "├─────┼─────────┼─────────┼──────────┤\n",
-      "│   7 │ 0.70000 │ 1.51613 │  1.58659 │\n",
-      "├─────┼─────────┼─────────┼──────────┤\n",
-      "│   8 │ 0.80000 │ 1.41351 │  1.48933 │\n",
-      "├─────┼─────────┼─────────┼──────────┤\n",
-      "│   9 │ 0.90000 │ 1.33616 │  1.41657 │\n",
-      "├─────┼─────────┼─────────┼──────────┤\n",
-      "│  10 │ 1.00000 │ 1.28355 │  1.36788 │\n",
-      "├─────┼─────────┼─────────┼──────────┤\n",
-      "│  11 │ 1.10000 │ 1.25519 │  1.34287 │\n",
-      "├─────┼─────────┼─────────┼──────────┤\n",
-      "│  12 │ 1.20000 │ 1.25067 │  1.34119 │\n",
-      "├─────┼─────────┼─────────┼──────────┤\n",
-      "│  13 │ 1.30000 │ 1.26961 │  1.36253 │\n",
-      "├─────┼─────────┼─────────┼──────────┤\n",
-      "│  14 │ 1.40000 │ 1.31164 │  1.40660 │\n",
-      "├─────┼─────────┼─────────┼──────────┤\n",
-      "│  15 │ 1.50000 │ 1.37648 │  1.47313 │\n",
-      "├─────┼─────────┼─────────┼──────────┤\n",
-      "│  16 │ 1.60000 │ 1.46383 │  1.56190 │\n",
-      "├─────┼─────────┼─────────┼──────────┤\n",
-      "│  17 │ 1.70000 │ 1.57345 │  1.67268 │\n",
-      "├─────┼─────────┼─────────┼──────────┤\n",
-      "│  18 │ 1.80000 │ 1.70510 │  1.80530 │\n",
-      "├─────┼─────────┼─────────┼──────────┤\n",
-      "│  19 │ 1.90000 │ 1.85859 │  1.95957 │\n",
-      "├─────┼─────────┼─────────┼──────────┤\n",
-      "│  20 │ 2.00000 │ 2.03373 │  2.13534 │\n",
-      "┕━━━━━┷━━━━━━━━━┷━━━━━━━━━┷━━━━━━━━━━┙\n"
+      "┍━━━━━┯━━━━━━━━━┯━━━━━━━━━━━━━┯━━━━━━━━━━┑\n",
+      "│   i │     x_i │   (FEM) y_i │   y(x_i) │\n",
+      "┝━━━━━┿━━━━━━━━━┿━━━━━━━━━━━━━┿━━━━━━━━━━┥\n",
+      "│   0 │ 0.00000 │     3.00000 │  3.00000 │\n",
+      "├─────┼─────────┼─────────────┼──────────┤\n",
+      "│   1 │ 0.10000 │     2.70000 │  2.71484 │\n",
+      "├─────┼─────────┼─────────────┼──────────┤\n",
+      "│   2 │ 0.20000 │     2.43100 │  2.45873 │\n",
+      "├─────┼─────────┼─────────────┼──────────┤\n",
+      "│   3 │ 0.30000 │     2.19190 │  2.23082 │\n",
+      "├─────┼─────────┼─────────────┼──────────┤\n",
+      "│   4 │ 0.40000 │     1.98171 │  2.03032 │\n",
+      "├─────┼─────────┼─────────────┼──────────┤\n",
+      "│   5 │ 0.50000 │     1.79954 │  1.85653 │\n",
+      "├─────┼─────────┼─────────────┼──────────┤\n",
+      "│   6 │ 0.60000 │     1.64459 │  1.70881 │\n",
+      "├─────┼─────────┼─────────────┼──────────┤\n",
+      "│   7 │ 0.70000 │     1.51613 │  1.58659 │\n",
+      "├─────┼─────────┼─────────────┼──────────┤\n",
+      "│   8 │ 0.80000 │     1.41351 │  1.48933 │\n",
+      "├─────┼─────────┼─────────────┼──────────┤\n",
+      "│   9 │ 0.90000 │     1.33616 │  1.41657 │\n",
+      "├─────┼─────────┼─────────────┼──────────┤\n",
+      "│  10 │ 1.00000 │     1.28355 │  1.36788 │\n",
+      "├─────┼─────────┼─────────────┼──────────┤\n",
+      "│  11 │ 1.10000 │     1.25519 │  1.34287 │\n",
+      "├─────┼─────────┼─────────────┼──────────┤\n",
+      "│  12 │ 1.20000 │     1.25067 │  1.34119 │\n",
+      "├─────┼─────────┼─────────────┼──────────┤\n",
+      "│  13 │ 1.30000 │     1.26961 │  1.36253 │\n",
+      "├─────┼─────────┼─────────────┼──────────┤\n",
+      "│  14 │ 1.40000 │     1.31164 │  1.40660 │\n",
+      "├─────┼─────────┼─────────────┼──────────┤\n",
+      "│  15 │ 1.50000 │     1.37648 │  1.47313 │\n",
+      "├─────┼─────────┼─────────────┼──────────┤\n",
+      "│  16 │ 1.60000 │     1.46383 │  1.56190 │\n",
+      "├─────┼─────────┼─────────────┼──────────┤\n",
+      "│  17 │ 1.70000 │     1.57345 │  1.67268 │\n",
+      "├─────┼─────────┼─────────────┼──────────┤\n",
+      "│  18 │ 1.80000 │     1.70510 │  1.80530 │\n",
+      "├─────┼─────────┼─────────────┼──────────┤\n",
+      "│  19 │ 1.90000 │     1.85859 │  1.95957 │\n",
+      "├─────┼─────────┼─────────────┼──────────┤\n",
+      "│  20 │ 2.00000 │     2.03373 │  2.13534 │\n",
+      "┕━━━━━┷━━━━━━━━━┷━━━━━━━━━━━━━┷━━━━━━━━━━┙\n"
      ]
     }
    ],
@@ -245,7 +245,7 @@
     "n = 20;\n",
     "(x,y) = math263.feuler(f, a, b, y0, n);\n",
     "table = np.transpose(np.stack((x, y, sym_y(x))));\n",
-    "hdrs = [\"i\", \"x_i\", \"y_i\", \"y(x_i)\"];\n",
+    "hdrs = [\"i\", \"x_i\", \"(FEM) y_i\", \"y(x_i)\"];\n",
     "print(tabulate(table, hdrs, tablefmt='mixed_grid', floatfmt='0.5f', showindex=True))"
    ]
   },
@@ -259,7 +259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 5,
    "id": "fa104a20",
    "metadata": {},
    "outputs": [
@@ -297,7 +297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 6,
    "id": "d7588c3a",
    "metadata": {},
    "outputs": [],
@@ -337,6 +337,14 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "66ca7529",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d13d8d6f-df81-457b-b949-ec0205c6dfd2",
    "metadata": {},
    "outputs": [],
    "source": []
