starts work on error analysis lecture

--- a/Python/02-euler_method.ipynb
+++ b/Python/02-euler_method.ipynb
@@ -16,15 +16,17 @@
     "Suppose that we want to numerically solve a first order IVP of the form\n",
     "\\begin{align}\n",
     "y'&=f(x,y),\\\\\n",
-    "y(x_0) &=y_0\n",
+    "y(a) &=y_0\n",
     "\\end{align}\n",
     "over the interval $[a,b]$.  Choosing some positive integer $n$, our goal is compute a table of points $(x_i,y_i)$ so that if $y$ is the true solution, then\n",
     "\\begin{equation}\n",
-    "y(x_i) = y_i\n",
+    "y_i\\approx y(x_i)\n",
     "\\end{equation}\n",
-    "for $n = 0,1,\\dots, n$.  We say that there are $n$ **steps**, or equivalently $n+1$ **mesh points** or nodes.  The distance $h_i=x_{i+1}-x_i$ is called the $i$th **step-size**, which may be variable.  For much of the course, however, we will use a fixed step size $h=(b-a)/n$.\n",
+    "for $n = 0,1,\\dots, n$.  We say that there are $n$ **steps**, or equivalently $n+1$ **mesh points** or nodes.  The distance $h_i=x_{i+1}-x_i$ is called the $i$th **step-size**, which may be variable.  For much of the course, however, we will use equally-spaced meshes with step-size $h=(b-a)/n$.\n",
     "\n",
-    "Once the mesh points have been chosen, the most straightforward approach to computing the $y_i$'s is known as Euler's method, which simply appeals to the idea of linearization from calculus.  Namely, if $y$ is the true solution and we assume that we have $y_i=y(x_i)$ exactly, then we have the approximation\n",
+    "Once the mesh points have been chosen, the most straightforward approach to computing the $y_i$'s is known as Euler's method.\n",
+    "The basic idea of the method is simply an appeal to linearization from calculus.\n",
+    "Namely, if $y$ is the true solution and we assume that we have $y_i=y(x_i)$ exactly, then we have the approximation\n",
     "\\begin{equation}\n",
     "\\begin{split}\n",
     "y(x_{i+1})&\\approx y(x_i) + y'(x_i)(x_{i+1}-x_i)\\\\\n",
@@ -34,7 +36,7 @@
     "**Euler's method** (a.k.a., the **foward Euler method**) recursively defines the $y_i$ by the formula\n",
     "\\begin{align*}\n",
     "y_{i+1} &= y_i + f(x_i, y_i)h \\qquad(0\\le i< n),\\\\\n",
-    "y_0&=y(x_0).\n",
+    "y_0&=y(a).\n",
     "\\end{align*}"
    ]
   },
@@ -153,9 +155,12 @@
     }
    ],
    "source": [
+    "# define IVP parameters\n",
     "f = lambda x, y: x**2 - y;\n",
     "a, b = 0, 2;\n",
     "y0=3;\n",
+    "\n",
+    "# solve the IVP symbolically with the sympy library\n",
     "x = sp.Symbol('x');\n",
     "y = sp.Function('y');\n",
     "ode = sp.Eq(y(x).diff(x), f(x,y(x)));\n",
@@ -163,6 +168,7 @@
     "display(soln) \n",
     "rhs=f(x,y(x));\n",
     "\n",
+    "# convert the symbolic solution to a Python function and plot it with matplotlib.pyplot\n",
     "sym_y=sp.lambdify(x, soln.rhs, modules=['numpy']); \n",
     "hx = 0.01;\n",
     "xvals = np.arange(a, b+hx, hx, dtype=np.double);\n",
@@ -242,8 +248,11 @@
     }
    ],
    "source": [
+    "# use the forward euler implementation in the math263 module to numerically solve the IVP with n=20 steps\n",
     "n = 20;\n",
     "(x,y) = math263.feuler(f, a, b, y0, n);\n",
+    "\n",
+    "# tabulate the results\n",
     "table = np.transpose(np.stack((x, y, sym_y(x))));\n",
     "hdrs = [\"i\", \"x_i\", \"(FEM) y_i\", \"(true) y(x_i)\"];\n",
     "print(tabulate(table, hdrs, tablefmt='mixed_grid', floatfmt='0.5f', showindex=True))"
@@ -280,76 +289,6 @@
     "plt.legend([f\"${sp.latex(soln)}$\",\"Euler method solution\"], loc='upper right');\n",
     "plt.show()"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "5b2b9552",
-   "metadata": {},
-   "source": [
-    "### Example 2.\n",
-    "Now consider the IVP\n",
-    "\\begin{align}\n",
-    "y' &= x + y,\\\\ \n",
-    "y(0) &= 1\n",
-    "\\end{align}\n",
-    "over the interval $[0, 10]$."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "id": "d7588c3a",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#f = lambda x, y: x+y;\n",
-    "#a, b = 0, 10;\n",
-    "#y0=1;\n",
-    "#n = 20;\n",
-    "#(x, y) = math263.feuler(f, a, b, y0, n);"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "id": "1242c142",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "??math263.feuler"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "908c3dc4",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b0b931b4",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "66ca7529",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d13d8d6f-df81-457b-b949-ec0205c6dfd2",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
