cleans up derivation of modified euler method in lecture 03

--- a/Python/03-error_analysis.ipynb
+++ b/Python/03-error_analysis.ipynb
@@ -46,7 +46,7 @@
     "## The order of a numerical method.\n",
     "\n",
     "Suppose $f$ and $g$ are functions of a real variable $x$ and that both are defined on an open interval containing $x=a$ except possibly at $x=a$ itself.\n",
-    "We say that $f$ **is of order $g$ at** $x=a$, and we write\n",
+    "We say that $f$ **is of order $g$ as $x$ tends toward $a$**, and we write\n",
     "\\begin{equation}\n",
     "f(x) = O\\big(g(x)\\big)\\text{ as } x\\to a\n",
     "\\end{equation}\n",
@@ -236,40 +236,44 @@
    "source": [
     "## A modified Euler method.\n",
     "\n",
-    "Going back to our analysis of Euler's method, it is clear that we could obtain a higher order method if our recurrence for generating the $y_i$'s agreed with more terms of the Taylor series for $y_*$, the true solution to the ODE that passes through the point $(x_i, y_i)$.\n",
-    "Rather than appeal to multivariable Taylor series, we offer a derivation of the so-called \"modified Euler method\" that is based on numerical integration.\n",
-    "\n",
-    "Suppose that we are given the IVP\n",
+    "Euler's method for numerically solving the IVP\n",
     "\\begin{align}\n",
     "y' &= f(x, y),\\\\\n",
-    "y(x_0) &= y_0,\n",
+    "y(x_0) &= y_0\n",
     "\\end{align}\n",
-    "and we wish to approximate $y(x_1)=y(x_0+h)$ where $h=x_1-x_0$.\n",
-    "By the fundamental theorem of calculus,\n",
-    "\\begin{equation}\n",
-    "y(x_1)-y_0 = y(x_1)-y(x_0) = \\int_{x_0}^{x_1} y'(x)\\mathrm{d}x =  \\int_{x_0}^{x_1} f(x,y)\\mathrm{d} x = \\int_{x_0}^{x_1} f\\big(x,y(x)\\big)\\mathrm{d} x.\n",
-    "\\end{equation}\n",
-    "Therefore, if we assume that the expression $f(x,y)$ has a continuous second derivative (as a function of $x$) on the interval $[x_0, x_1]$, then the trapezoidal rule gives\n",
+    "is based on the idea that $f\\big(x_0, y(x_0)\\big)$ is the slope of the tangent line to the graph of $y$ at $x=x_0$, and therefore\n",
     "\\begin{equation}\n",
     "\\begin{split}\n",
-    "y(x_1)-y_0 &=\\frac{h}{2}\\Big(f\\big(x_0, y(x_0)\\big)+f\\big(x_{1}, y(x_1)\\big)\\Big) +O\\big(h^3\\big)\\\\\n",
-    "&=\\frac{h}{2}\\Big(f(x_0, y_0)+f\\big(x_{1}, y(x_1)\\big)\\Big) +O\\big(h^3\\big)\n",
+    "y(x_0+h)&\\approx y(x_0) + hf\\big(x_0, y(x_0)\\big)\\\\\n",
+    "&= y_0 + hf(x_0, y_0).\n",
+    "\\end{split}\n",
+    "\\end{equation}\n",
+    "\n",
+    "We now develop a \"modified Euler method\" that is based on integration.\n",
+    "By the fundamental theorem of calculus,\n",
+    "\\begin{equation}\n",
+    "y(x_0+h)-y_0=y(x_1)-y(x_0)=\\int_{x_0}^{x_0+h}y'(x)\\mathrm{d}x=\\int_{x_0}^{x_0+h}f\\big(x,y(x)\\big)\\mathrm{d} x.\n",
+    "\\end{equation}\n",
+    "Therefore, if we assume that the expression $f(x,y)$ has a continuous second derivative (as a function of $x$) on the interval $[x_0, x_0+h]$, then the trapezoidal rule gives\n",
+    "\\begin{equation}\n",
+    "\\begin{split}\n",
+    "y(x_0+h)-y_0 &=\\frac{h}{2}\\Big(f\\big(x_0, y(x_0)\\big)+f\\big(x_{0}+h, y(x_0+h)\\big)\\Big) +O\\big(h^3\\big)\\\\\n",
+    "&=\\frac{h}{2}\\Big(f(x_0, y_0)+f\\big(x_{0}+h, y(x_0+h)\\big)\\Big) +O\\big(h^3\\big)\n",
     "\\end{split}\n",
     "\\end{equation}\n",
     "as $h\\to 0$.\n",
-    "Unfortunately, we do not know how to evaluate $f\\big(x_1,y(x_1)\\big)$ since we do not yet know the value of $y(x_1)$.\n",
-    "Our solution is to approximate $y(x_1)$ using the original Euler method.\n",
+    "Unfortunately, we do not know how to evaluate $f\\big(x_0+h,y(x_0+h)\\big)$ since we do not yet know the value of $y(x_0+h)$.\n",
+    "Our solution is to approximate the $y(x_0+h)$ appearing on the right above using the original Euler method.\n",
     "In particular,\n",
     "\\begin{equation}\n",
-    "y(x_1) = y_0 + hf(x_0, y_0) + O\\big(h^2\\big)\\text{ as } h\\to 0.\n",
+    "y(x_0+h) = y_0 + hf(x_0, y_0) + O\\big(h^2\\big)\\text{ as } h\\to 0.\n",
     "\\end{equation}\n",
-    "Whence,\n",
+    "Substituting this estimate into the previous displayed equation, we can use Taylor series to argue that\n",
     "\\begin{equation}\n",
-    "y(x_1)-y_0=\\frac{h}{2}\\Big(f(x_0, y_0)+f\\big(x_0+h,y_0+hf(x_0,y_0)\\big)\\Big)+O\\big(h^3\\big)\\text{ as }h\\to 0.\n",
+    "y(x_0+h)-y_0=\\frac{h}{2}\\Big(f(x_0, y_0)+f\\big(x_0+h,y_0+hf(x_0,y_0)\\big)\\Big)+O\\big(h^3\\big)\\text{ as }h\\to 0.\n",
     "\\end{equation}\n",
-    "***NOTE: It looks like we need multivariable Taylor series to make this last line rigorous.***\n",
     "\n",
-    "The **modified Euler method** is defined by the recurrence\n",
+    "The **modified Euler method** is then defined by the recurrence\n",
     "\\begin{equation}\n",
     "y_{i+1} = y_i + \\frac{h}{2}\\left(k_1 + k_2\\right),\n",
     "\\end{equation}\n",
@@ -278,17 +282,15 @@
     "k_1 &= f(x_i, y_i),\\\\\n",
     "k_2 &= f(x_i+h, y_i+hk_1).\n",
     "\\end{align}\n",
-    "The argument above shows that the local truncation error for this method is $O(h^3)$ as $h\\to 0$.\n",
-    "We take this as evidence for the fact that the modifed Euler method is an order $2$ numerical method."
+    "\n",
+    "The above derivation of the modified Euler method shows the following, which we take as evidence for the fact that the modifed Euler method is an order $2$ numerical method.\n",
+    "\n",
+    "---\n",
+    "**Theorem.**\n",
+    "The local truncation error for the modified Euler's method is $O(h^3)$ as $h\\to 0$.\n",
+    "\n",
+    "---"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "2224cb47",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
