adds Heun's name to modified Euler method

--- a/Python/03-error_analysis.ipynb
+++ b/Python/03-error_analysis.ipynb
@@ -273,7 +273,7 @@
     "y(x_0+h)-y_0=\\frac{h}{2}\\Big(f(x_0, y_0)+f\\big(x_0+h,y_0+hf(x_0,y_0)\\big)\\Big)+O\\big(h^3\\big)\\text{ as }h\\to 0.\n",
     "\\end{equation}\n",
     "\n",
-    "The **modified Euler method** is then defined by the recurrence\n",
+    "The **modified Euler method** (also known as **Heun's method**) is then defined by the recurrence\n",
     "\\begin{equation}\n",
     "y_{i+1} = y_i + \\frac{h}{2}\\left(k_1 + k_2\\right),\n",
     "\\end{equation}\n",
@@ -283,7 +283,7 @@
     "k_2 &= f(x_i+h, y_i+hk_1).\n",
     "\\end{align}\n",
     "\n",
-    "The above derivation of the modified Euler method shows the following, which we take as evidence for the fact that the modifed Euler method is an order $2$ numerical method.\n",
+    "The above derivation demonstrates the following result, which we take as evidence for the fact that the modifed Euler method is an order $2$ numerical method.\n",
     "\n",
     "---\n",
     "**Theorem.**\n",
