fixes two typos in Euler method lecture

--- a/Python/02-euler_method.ipynb
+++ b/Python/02-euler_method.ipynb
@@ -59,7 +59,7 @@
     "        '''\n",
     "        numerically solves IVP\n",
     "                y' = f(x,y), y(a)=y0\n",
-    "        over the interval [a, b] via n steps of the (foward) euler method \n",
+    "        over the interval [a, b] via n steps of the (foward) Euler method \n",
     "        '''\n",
     "        h = (b-a)/n;\n",
     "        x = np.linspace(a, b, num=n+1);\n",
@@ -123,7 +123,7 @@
    "id": "8e517328",
    "metadata": {},
    "source": [
-    "We first solve the problem symoblically."
+    "We first solve the problem symbolically."
    ]
   },
   {
