--- a/Python/05-nde-multistep_methods.ipynb
+++ b/Python/05-nde-multistep_methods.ipynb
@@ -7,21 +7,21 @@
    "source": [
     "# Lecture 5: Multistep methods.\n",
     "\n",
-    "The methods that we have considered so far are all called **single-step methods** because the point $(x_{i+1}, y_{i+1})$ is computed using only information from the previous step, namely $(x_i, y_i)$.\n",
+    "The methods that we have considered so far are called **single-step methods** because the point $(x_{i+1}, y_{i+1})$ is computed using only information from the previous step, namely $(x_i, y_i)$.\n",
     "In particular, the methods have all depended on a formula of the form \n",
-    "\\begin{equation}\n",
+    "\\begin{equation*}\n",
     "y_{i+1} = y_i + h\\phi(x_i, y_i, h).\n",
-    "\\end{equation}\n",
+    "\\end{equation*}\n",
     "These methods are also called **starting methods** because the initial-value condition $y(x_0)=y_0$ gives enough information to use these methods from the start.\n",
     "On the other hand, **multistep methods** use more than one of the previously computed $y_j$.\n",
     "An **$m$-step method** would use the previous $m$ values: $(x_i,y_i), (x_{i-1},y_{i-1}),\\dots, (x_{i-m+1},y_{i-m+1})$.\n",
-    "**Linear multistep methods** take the form\n",
-    "\\begin{equation}\n",
+    "A **linear $m$-step method** takes the form\n",
+    "\\begin{equation}\\label{linear multistep form}\n",
     "y_{i+1} = \\sum_{j=1}^m\\alpha_jy_{i+1-j} + h\\sum_{j=0}^m\\beta_jf(x_{i+1-j}, y_{i+1-j}).\n",
     "\\end{equation}\n",
     "Clearly such a method cannot be used until $m$ previous values are known.\n",
     "For this reason, these methods must be paired with a starting method and are themselves called **continuing methods**.\n",
-    "However, there is additional wrinkle if $\\beta_0\\ne 0$ since in that case $y_{i+1}$ appears on both sides of the defining equation.  \n",
+    "However, there is additional wrinkle if $\\beta_0\\ne 0$ since in that case $y_{i+1}$ appears on both sides of the defining equation.\n",
     "If $\\beta_0=0$, the method is said to be **explicit**.\n",
     "Otherwise, the method is said to be **implicit**.\n",
     "If the method is implicit and the function $f(x, y)$ is linear in $y$, then it is easy to solve for $y_{i+1}$ once the specific IVP is given, but in practice this is often not the case.\n",
@@ -37,38 +37,38 @@
    "source": [
     "## Adams–Bashforth 2-step (explicit) method.\n",
     "\n",
-    "Every explicit linear $2$-step method takes the form\n",
+    "For an explicit, linear $2$-step method equation \\eqref{linear multistep form} simplies to\n",
     "\\begin{equation}\\label{2-step form}\n",
     "y_{i+1} = \\alpha_1y_i + h\\big(\\beta_1f(x_i,y_i) + \\beta_2f(x_{i-1},y_{i-1}\\big).\n",
     "\\end{equation}\n",
-    "The idea of the $2$-step Adams–Bashforth method is to force the formula to be exact for the first 3 terms of the Taylor series for the true solution $y$.\n",
+    "The idea of the Adams–Bashforth method is to force this formula to be exact for the first 3 terms of the Taylor series for the true solution $y$.\n",
     "This will ensure that the local truncation error for the method is $O(h^3)$ as $h\\to 0$.\n",
     "Note that with only $3$ parameters to determine (viz, $\\alpha_1, \\beta_1, \\beta_2)$, this is the best that can be done.\n",
     "By linearity, it is enough to make it exact for the cases $y(x)=1$, $y(x)=x$, and $y(x)=x^2$.\n",
-    "If $y(x)=1$, then $f(x,y(x)) = y'(x) = 0$, and so the above equation \\eqref{2-step form} becomes\n",
-    "\\begin{equation}\n",
+    "If $y(x)=1$, then $f(x,y(x)) = y'(x) = 0$, and so the equation \\eqref{2-step form} becomes\n",
+    "\\begin{equation}\\label{ab2 condition 1}\n",
     "1=\\alpha_1.\n",
     "\\end{equation}\n",
     "Similarly, if $y(x)=x$, then $y'(x)=1$ and \\eqref{2-step form} becomes\n",
-    "\\begin{equation}\n",
+    "\\begin{equation}\\label{ab2 condition 2}\n",
     "x_{i+1}=\\alpha_1 x_i + h(\\beta_1+\\beta_2).\n",
     "\\end{equation}\n",
     "Finally, if $y(x)=x^2$, then $y'(x)=2x$ and \\eqref{2-step form} becomes\n",
-    "\\begin{equation}\n",
+    "\\begin{equation}\\label{ab2 condition 3}\n",
     "x_{i+1}^2 = \\alpha_1x_i^2+ h(2\\beta_1x_i + 2\\beta_2x_{i-1}).\n",
     "\\end{equation}\n",
-    "Now the preceding three equations must hold for all values of $x_i$ and $h$.\n",
+    "Now, equations \\eqref{ab2 condition 1}, \\eqref{ab2 condition 2}, and \\eqref{ab2 condition 3} must hold for all values of $x_i$ and $h$.\n",
     "Choosing $x_{i}=1$ and $h=1$ so that $x_{i-1}=0$ and $x_{i+1}=2$, we arrive at the system of equations\n",
-    "\\begin{align}\n",
+    "\\begin{align*}\n",
     "1&=\\alpha_1,\\\\\n",
     "2&=\\alpha_1+\\beta_1+\\beta_2,\\\\\n",
     "4&=\\alpha_1+2\\beta_1.\n",
-    "\\end{align}\n",
+    "\\end{align*}\n",
     "Solving the system yields $\\alpha_1=1$, $\\beta_1=3/2$, and $\\beta_2=-1/2$.\n",
     "The **(explicit) Adams–Bashforth two-step method (AB2)** is therefore defined by the recurrence\n",
-    "\\begin{equation}\n",
+    "\\begin{equation*}\n",
     "y_{i+1} = y_i + \\frac{h}{2}\\big(3y_i' - y_{i-1}'\\big),\n",
-    "\\end{equation}\n",
+    "\\end{equation*}\n",
     "where $y_i' = f(x_i, y_i)$ for each $i\\ge 1$.\n",
     "\n",
     "As we noted above, the local truncation error for the method is $O(h^3)$ as $h\\to 0$.\n",
@@ -84,9 +84,9 @@
     "## Adams–Bashforth 4-step (explicit) method.\n",
     "\n",
     "In a similar manner, one may derive the **(explicit) Adams–Bashforth four-step method (AB4)**, which is defined by the recurrence\n",
-    "\\begin{equation}\n",
+    "\\begin{equation*}\n",
     "y_{i+1}=y_i+\\frac{h}{24}\\big(55y_i'-59y_{i-1}'+37y_{i-2}'-9y_{i-3}'\\big)\n",
-    "\\end{equation}\n",
+    "\\end{equation*}\n",
     "and has local truncation error that is $O(h^5)$ as $h\\to 0$.\n",
     "Thus, it should be paired with an order $4$ starting method such as the classical RK4 method."
    ]
@@ -115,20 +115,33 @@
     "## Example.\n",
     "\n",
     "We now use the IVP\n",
-    "\\begin{align}\n",
+    "\\begin{align*}\n",
     "y'&=y-x^2+1,\\\\\n",
     "y(0)&=1/2\n",
-    "\\end{align}\n",
+    "\\end{align*}\n",
     "as a test case for an empirical comparison of the multistep method AB2 with Heun's modified (single-step) Euler method.\n",
     "Note that both methods have the same order of accuracy, namely, order $2$."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "c5b540d7",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/markdown": [
+       "The true solution to the ODE $y'=- x^{2} + y{\\left(x \\right)} + 1$ with initial condition $y(0)=0.5$ is $y{\\left(x \\right)} = x^{2} + 2 x - 0.5 e^{x} + 1$."
+      ],
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "import math263\n",
     "import numpy as np\n",
@@ -140,7 +153,28 @@
     "# define IVP parameters\n",
     "f = lambda x, y: y - x**2 + 1;\n",
     "a, b = 0, 2;\n",
-    "y0=1/2;"
+    "y0=1/2;\n",
+    "\n",
+    "# solve the IVP symbolically with the sympy library\n",
+    "x = sp.Symbol('x');\n",
+    "y = sp.Function('y');\n",
+    "ode = sp.Eq(y(x).diff(x), f(x,y(x)));\n",
+    "soln=sp.dsolve(ode, y(x), ics={y(a): y0}); \n",
+    "rhs=f(x,y(x));\n",
+    "display(Markdown(f\"The true solution to the ODE $y'={sp.latex(rhs)}$ with initial condition $y({a})={y0}$ is ${sp.latex(soln)}$.\"))\n",
+    "sym_y=sp.lambdify(x, soln.rhs, modules=['numpy']);\n",
+    "\"\"\"\n",
+    "# numerically solve the IVP with n=10 steps of forward Euler and n=10 steps of RK4\n",
+    "n = 10;\n",
+    "(x, y_euler) = math263.mem(f, a, b, y0, n);\n",
+    "(x, y_rk4)   = math263.ab2(f, a, b, y0, n);\n",
+    "\n",
+    "# tabulate the results\n",
+    "print(\"Comparison of global errors for MEM and AB2.\")\n",
+    "table = np.transpose(np.stack((x, abs(sym_y(x)-y_euler), abs(sym_y(x)-y_rk4))));\n",
+    "hdrs = [\"i\", \"x_i\", \"e_{i,mem} = |y(x_i)-y_i|\", \"e_{i,ab2} = |y(x_i)-y_i|\"];\n",
+    "print(tabulate(table, hdrs, tablefmt='mixed_grid', floatfmt='0.5f', showindex=True))\n",
+    "\"\"\";"
    ]
   },
   {
@@ -165,7 +199,7 @@
     "     1. Use both AB4 and (single-step) RK4 to approximate $y(3)$ for $n=2^k$ with $k=3,\\dots, 10$.\n",
     "     Display the absolute errors for both in a single table.\n",
     "     Do the data appear consistent with the \"advertised\" local truncation error for AB4?  Explain.\n",
-    "     1. Record the time that each method requires to perform each of the above calculation and present the results together in a table for easy comparison.\n",
+    "     1. Record the time that each method requires to perform each of the above calculations and present the results together in a table for easy comparison.\n",
     "     Comment on what you observe."
    ]
   }
@@ -186,7 +220,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.7"
+   "version": "3.11.8"
   }
  },
  "nbformat": 4,
