--- a/Python/05-nde-multistep_methods.ipynb
+++ b/Python/05-nde-multistep_methods.ipynb
@@ -16,7 +16,7 @@
     "On the other hand, **multistep methods** use more than one of the previously computed $y_j$.\n",
     "An **$m$-step method** would use the previous $m$ values: $(x_i,y_i), (x_{i-1},y_{i-1}),\\dots, (x_{i-m+1},y_{i-m+1})$.\n",
     "A **linear $m$-step method** takes the form\n",
-    "\\begin{equation}\\label{linear multistep form}\n",
+    "\\begin{equation}\\label{linear multistep form}\\tag{5.1}\n",
     "y_{i+1} = \\sum_{j=1}^m\\alpha_jy_{i+1-j} + h\\sum_{j=0}^m\\beta_jf(x_{i+1-j}, y_{i+1-j}).\n",
     "\\end{equation}\n",
     "Clearly such a method cannot be used until $m$ previous values are known.\n",
@@ -37,8 +37,8 @@
    "source": [
     "## Adams–Bashforth 2-step (explicit) method.\n",
     "\n",
-    "For an explicit, linear $2$-step method equation \\eqref{linear multistep form} simplies to\n",
-    "\\begin{equation}\\label{2-step form}\n",
+    "For an explicit, linear $2$-step method equation \\eqref{linear multistep form} simplifies to\n",
+    "\\begin{equation}\\label{2-step form}\\tag{5.2}\n",
     "y_{i+1} = \\alpha_1y_i + h\\big(\\beta_1f(x_i,y_i) + \\beta_2f(x_{i-1},y_{i-1}\\big).\n",
     "\\end{equation}\n",
     "The idea of the Adams–Bashforth method is to force this formula to be exact for the first 3 terms of the Taylor series for the true solution $y$.\n",
@@ -46,15 +46,15 @@
     "Note that with only $3$ parameters to determine (viz, $\\alpha_1, \\beta_1, \\beta_2)$, this is the best that can be done.\n",
     "By linearity, it is enough to make it exact for the cases $y(x)=1$, $y(x)=x$, and $y(x)=x^2$.\n",
     "If $y(x)=1$, then $f(x,y(x)) = y'(x) = 0$, and so the equation \\eqref{2-step form} becomes\n",
-    "\\begin{equation}\\label{ab2 condition 1}\n",
+    "\\begin{equation}\\label{ab2 condition 1}\\tag{5.3}\n",
     "1=\\alpha_1.\n",
     "\\end{equation}\n",
     "Similarly, if $y(x)=x$, then $y'(x)=1$ and \\eqref{2-step form} becomes\n",
-    "\\begin{equation}\\label{ab2 condition 2}\n",
+    "\\begin{equation}\\label{ab2 condition 2}\\tag{5.4}\n",
     "x_{i+1}=\\alpha_1 x_i + h(\\beta_1+\\beta_2).\n",
     "\\end{equation}\n",
     "Finally, if $y(x)=x^2$, then $y'(x)=2x$ and \\eqref{2-step form} becomes\n",
-    "\\begin{equation}\\label{ab2 condition 3}\n",
+    "\\begin{equation}\\label{ab2 condition 3}\\tag{5.5}\n",
     "x_{i+1}^2 = \\alpha_1x_i^2+ h(2\\beta_1x_i + 2\\beta_2x_{i-1}).\n",
     "\\end{equation}\n",
     "Now, equations \\eqref{ab2 condition 1}, \\eqref{ab2 condition 2}, and \\eqref{ab2 condition 3} must hold for all values of $x_i$ and $h$.\n",
@@ -73,7 +73,7 @@
     "\n",
     "As we noted above, the local truncation error for the method is $O(h^3)$ as $h\\to 0$.\n",
     "This makes AB2 an order $2$ method.\n",
-    "Thus, it should be paired with a starter method whose order of accuracy is at least $2$ such as Heun's modified Euler method.  "
+    "Thus, it should be paired with a starter method whose order of accuracy is at least $2$ such as Heun's modified Euler method."
    ]
   },
   {
