--- a/Python/02-euler_method.ipynb
+++ b/Python/02-euler_method.ipynb
@@ -290,6 +290,30 @@
     "plt.legend([f\"${sp.latex(soln)}$\",\"Euler's method\"], loc='upper right');\n",
     "plt.show();"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ee3bdcd7",
+   "metadata": {},
+   "source": [
+    "## Exercises:\n",
+    "\n",
+    "1. Consider the IVP \n",
+    "\\begin{align*}\n",
+    "y'&=2x-3y+1,\\\\ y(0)&=1.\n",
+    "\\end{align*}\n",
+    "    1. Solve the IVP symbolically and plot the solution over the interval $[0,1]$.\n",
+    "    1. Use Euler's method to solve the IVP numerically over the interval $[0, 1]$ with $n$ steps for $n = 8, 16, 32, 64$. \n",
+    "    1. Plot the numerical approximations together with the true solution on a single set of axes. Be sure to use labels, legends, and colors so that the different results are distinguishable.\n",
+    "    1. Compute the absolute and relative errors at $x = 1$ for each of your numerical solutions.  Display the results in a table with (of course) appropriate labels/headers. What seems to be happening to the errors each time that we double the number of steps?\n",
+    "1. Consider the IVP \n",
+    "\\begin{align*}\n",
+    "y'&=x^2+y^2,\\\\\n",
+    "y(0)&=1.\n",
+    "\\end{align*}\n",
+    "    1. Solve the IVP symbolically.  \n",
+    "    1. Use Euler's method with step sizes $h = 0.1$ and $h = 0.05$ to obtain a numerical approximation to $y(1/2)$."
+   ]
   }
  ],
  "metadata": {
