--- a/Python/05-nde-multistep_methods.ipynb
+++ b/Python/05-nde-multistep_methods.ipynb
@@ -114,32 +114,54 @@
    "source": [
     "## Example.\n",
     "\n",
+    "We now conduct an empirical comparison of AB2 with Heun's modified Euler method (MEM) using the IVP\n",
     "We now use the IVP\n",
     "\\begin{align*}\n",
     "y'&=y-x^2+1,\\\\\n",
     "y(0)&=1/2\n",
     "\\end{align*}\n",
-    "as a test case for an empirical comparison of the multistep method AB2 with Heun's modified (single-step) Euler method.\n",
-    "Note that both methods have the same order of accuracy, namely, order $2$."
+    "as a test case.\n",
+    "First we use both methods to solve the problem over the interval $[0,2]$ in $n=10$ steps.\n",
+    "We then present the global truncation errors at each step in a table."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 14,
    "id": "c5b540d7",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/markdown": [
-       "The true solution to the ODE $y'=- x^{2} + y{\\left(x \\right)} + 1$ with initial condition $y(0)=0.5$ is $y{\\left(x \\right)} = x^{2} + 2 x - 0.5 e^{x} + 1$."
-      ],
-      "text/plain": [
-       "<IPython.core.display.Markdown object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Comparison of global errors for MEM and AB2.\n",
+      "┍━━━━━┯━━━━━━━━━┯━━━━━━━━━━━━━━━━━━━━┯━━━━━━━━━━━━━━━━━━━━┑\n",
+      "│   i │     x_i │   MEM global error │   AB2 global error │\n",
+      "┝━━━━━┿━━━━━━━━━┿━━━━━━━━━━━━━━━━━━━━┿━━━━━━━━━━━━━━━━━━━━┥\n",
+      "│   0 │ 0.00000 │            0.00000 │            0.00000 │\n",
+      "├─────┼─────────┼────────────────────┼────────────────────┤\n",
+      "│   1 │ 0.20000 │            0.00330 │            0.00330 │\n",
+      "├─────┼─────────┼────────────────────┼────────────────────┤\n",
+      "│   2 │ 0.40000 │            0.00717 │            0.00229 │\n",
+      "├─────┼─────────┼────────────────────┼────────────────────┤\n",
+      "│   3 │ 0.60000 │            0.01170 │            0.00020 │\n",
+      "├─────┼─────────┼────────────────────┼────────────────────┤\n",
+      "│   4 │ 0.80000 │            0.01699 │            0.00295 │\n",
+      "├─────┼─────────┼────────────────────┼────────────────────┤\n",
+      "│   5 │ 1.00000 │            0.02317 │            0.00750 │\n",
+      "├─────┼─────────┼────────────────────┼────────────────────┤\n",
+      "│   6 │ 1.20000 │            0.03036 │            0.01391 │\n",
+      "├─────┼─────────┼────────────────────┼────────────────────┤\n",
+      "│   7 │ 1.40000 │            0.03871 │            0.02277 │\n",
+      "├─────┼─────────┼────────────────────┼────────────────────┤\n",
+      "│   8 │ 1.60000 │            0.04839 │            0.03486 │\n",
+      "├─────┼─────────┼────────────────────┼────────────────────┤\n",
+      "│   9 │ 1.80000 │            0.05956 │            0.05115 │\n",
+      "├─────┼─────────┼────────────────────┼────────────────────┤\n",
+      "│  10 │ 2.00000 │            0.07242 │            0.07292 │\n",
+      "┕━━━━━┷━━━━━━━━━┷━━━━━━━━━━━━━━━━━━━━┷━━━━━━━━━━━━━━━━━━━━┙\n"
+     ]
     }
    ],
    "source": [
@@ -160,21 +182,29 @@
     "y = sp.Function('y');\n",
     "ode = sp.Eq(y(x).diff(x), f(x,y(x)));\n",
     "soln=sp.dsolve(ode, y(x), ics={y(a): y0}); \n",
-    "rhs=f(x,y(x));\n",
-    "display(Markdown(f\"The true solution to the ODE $y'={sp.latex(rhs)}$ with initial condition $y({a})={y0}$ is ${sp.latex(soln)}$.\"))\n",
+    "#rhs=f(x,y(x));\n",
+    "#display(Markdown(f\"The true solution to the ODE $y'={sp.latex(rhs)}$ with initial condition $y({a})={y0}$ is ${sp.latex(soln)}$.\"))\n",
     "sym_y=sp.lambdify(x, soln.rhs, modules=['numpy']);\n",
-    "\"\"\"\n",
+    "\n",
     "# numerically solve the IVP with n=10 steps of forward Euler and n=10 steps of RK4\n",
     "n = 10;\n",
-    "(x, y_euler) = math263.mem(f, a, b, y0, n);\n",
-    "(x, y_rk4)   = math263.ab2(f, a, b, y0, n);\n",
+    "(x, y_mem) = math263.mem(f, a, b, y0, n);\n",
+    "(x, y_ab2)   = math263.ab2(f, a, b, y0, n); \n",
+    "\n",
     "\n",
     "# tabulate the results\n",
     "print(\"Comparison of global errors for MEM and AB2.\")\n",
-    "table = np.transpose(np.stack((x, abs(sym_y(x)-y_euler), abs(sym_y(x)-y_rk4))));\n",
-    "hdrs = [\"i\", \"x_i\", \"e_{i,mem} = |y(x_i)-y_i|\", \"e_{i,ab2} = |y(x_i)-y_i|\"];\n",
-    "print(tabulate(table, hdrs, tablefmt='mixed_grid', floatfmt='0.5f', showindex=True))\n",
-    "\"\"\";"
+    "table = np.transpose(np.stack((x, abs(sym_y(x)-y_mem), abs(sym_y(x)-y_ab2))));\n",
+    "hdrs = [\"i\", \"x_i\", \"MEM global error\", \"AB2 global error\"];\n",
+    "print(tabulate(table, hdrs, tablefmt='mixed_grid', floatfmt='0.5f', showindex=True))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7ea5ddb9",
+   "metadata": {},
+   "source": [
+    "TODO: Give timing analysis example as in NB version."
    ]
   },
   {
